--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -11,10 +11,9 @@ import "../styles/global.css";
   </head>
   <body>
     <nav>
-      <a href="/">Weekly meals</a>
+      <a href="/">This week</a>
       <a href="/add-meals">Add meals</a>
     </nav>
-    <!-- <h1>{title}</h1> -->
     <main>
       <slot />
     </main>
