--- a/src/pages/add-meals.astro
+++ b/src/pages/add-meals.astro
@@ -51,37 +51,49 @@ if (Astro.request.method === "POST") {
 
 <DefaultLayout title="Add new items">
   <h2>Add new meal</h2>
-  <form method="POST" style="display: grid">
-    <label for="week">Week</label>
-    <!-- <input id="week" name="week" type="week" /> -->
-    <select id="week" name="week">
-      <option value={currentISOWeek}>This week</option>
-      <option value={nextISOWeek}>Next week</option>
-    </select>
+  <form method="POST">
+    <div>
+      <label for="week">Week</label>
+      <!-- <input id="week" name="week" type="week" /> -->
+      <select id="week" name="week">
+        <option value={currentISOWeek}>This week</option>
+        <option value={nextISOWeek}>Next week</option>
+      </select>
+    </div>
 
-    <label for="dayOfWeek">Day of week</label>
-    <select id="dayOfWeek" name="dayOfWeek">
-      <option value="Monday">Monday</option>
-      <option value="Tuesday">Tuesday</option>
-      <option value="Wednesday">Wednesday</option>
-      <option value="Thursday">Thursday</option>
-      <option value="Friday">Friday</option>
-    </select>
+    <div>
+      <label for="dayOfWeek">Day of week</label>
+      <select id="dayOfWeek" name="dayOfWeek">
+        <option value="Monday">Monday</option>
+        <option value="Tuesday">Tuesday</option>
+        <option value="Wednesday">Wednesday</option>
+        <option value="Thursday">Thursday</option>
+        <option value="Friday">Friday</option>
+      </select>
+    </div>
 
-    <label for="name">Meal name</label>
-    <input id="name" name="name" />
+    <div>
+      <label for="name">Meal name</label>
+      <input id="name" name="name" />
+    </div>
 
-    <label for="meal_type">Meal type</label>
-    <select id="meal_type" name="meal_type">
-      <option value="Lunch">Lunch</option>
-      <option value="Dinner">Dinner</option>
-    </select>
+    <div>
+      <label for="meal_type">Meal type</label>
+      <select id="meal_type" name="meal_type">
+        <option value="Lunch">Lunch</option>
+        <option value="Dinner">Dinner</option>
+      </select>
+    </div>
 
-    <label for="macrofactor_url">MacroFactor link</label>
-    <input id="macrofactor_url" name="macrofactor_url" />
+    <div>
+      <label for="macrofactor_url">MacroFactor link</label>
+      <input id="macrofactor_url" name="macrofactor_url" />
+    </div>
 
-    <label for="notes">Notes</label>
-    <textarea id="notes" name="notes"></textarea>
+    <div>
+      <label for="notes">Notes</label>
+      <textarea id="notes" name="notes"></textarea>
+    </div>
 
     <button type="submit">Submit</button>
   </form>
