--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,39 +1,157 @@
-/* the props */
-@import "https://unpkg.com/open-props";
-
-/* optional imports that use the props */
-@import "https://unpkg.com/open-props/normalize.min.css";
-@import "https://unpkg.com/open-props/buttons.min.css";
+@import "./reset.css";
+@import "./colors.css";
+/* @import "https://unpkg.com/open-props"; */
 
 /* just dark or light themes */
-@import "https://unpkg.com/open-props/normalize.dark.min.css";
+/* @import "https://unpkg.com/open-props/normalize.dark.min.css";
 @import "https://unpkg.com/open-props/buttons.dark.min.css";
 @import "https://unpkg.com/open-props/normalize.light.min.css";
-@import "https://unpkg.com/open-props/buttons.light.min.css";
+@import "https://unpkg.com/open-props/buttons.light.min.css"; */
 
-/* overrides */
-:where(h1) {
-  font-size: var(--font-size-6);
-  margin-block-end: var(--size-3);
+
+
+:root {
+  --surface-1: var(--red-1);
+  --surface-2: var(--red-2);
+  --button-bgColor-rest: var(--red-9);
+  --button-bgColor-hover: var(--red-10);
+  --button-bgColor-active: var(--red-11);
+  --button-fgColor: var(--red-contrast);
+  --button-borderColor-rest: var(--red-a8);
+  --fgColor-default: var(--gray-11);
+  --fgColor-secondary: var(--gray-9);
+  --fgColor-accent: var(--red-11);
+  --control-borderColor-default: var(--gray-10);
+  --control-borderColor-focus: var(--red-10);
+  --link-fgColor-rest: var(--red-11);
+  --link-fgColor-hover: var(--red-11);
+  --base-size-4: 0.25rem;
+  --base-size-8: 0.5rem;
+  --base-size-12: 0.75rem;
+  --base-size-16: 1rem;
+  --base-size-20: 1.25rem;
+  --base-size-24: 1.5rem;
+  --base-size-28: 1.75rem;
+  --base-size-32: 2rem;
+  --base-size-36: 2.25rem;
+  --base-size-40: 2.5rem;
+  --base-size-44: 2.75rem;
+  --base-size-48: 3rem;
+  --base-size-64: 4rem;
+  --base-size-80: 5rem;
+  --base-size-96: 6rem;
+  --base-size-112: 7rem;
+  --base-size-128: 8rem;
+  --control-medium-size: 2rem;
+  --control-medium-lineBoxHeight: 1.25rem;
+  --control-medium-paddingBlock: 0.375rem;
+  --control-medium-paddingInline-condensed: 0.5rem;
+  --control-medium-paddingInline-normal: 0.75rem;
+  --control-medium-paddingInline-spacious: 1rem;
+  --control-medium-gap: 0.5rem;
+  --control-borderRadius: var(--base-size-4);
+  --fontStack-system: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji';
+  --text-body-size-large: 1rem;
+  --text-body-lineHeight-large: 1.5;
 }
 
-:where(h2) {
-  font-size: var(--font-size-5);
+html {
+  /* background-color: var(--surface-gray); */
+  background-color: var(--color-background);
+  color: var(--fgColor-default);
+  font-family: var(--fontStack-system);
 }
 
-:where(h3) {
-    font-size: var(--font-size-4);
+input, button, select, textarea {
+  min-block-size: var(--control-medium-size);
+  padding-block: var(--control-medium-paddingBlock);
+  padding-inline: var(--control-medium-paddingInline-normal);
+  background: var(--color-background);
+  border: solid 1px var(--control-borderColor-default);
+  /* box-shadow: inset 0 0 0 1px var(--control-borderColor-default); */
+  border-radius: var(--control-borderRadius);
+
+  &:focus-visible {
+    outline: solid 2px var(--control-borderColor-focus);
+    border: unset;
+    box-shadow: unset;
+  }
 }
 
-:where(h4) {
-    font-size: var(--font-size-3);
+button {
+  background: var(--button-bgColor-rest);
+  color: var(--button-fgColor);
+  box-shadow: 0px 1px 0px 0px var(--button-borderColor-rest);
+  border-color: var(--button-borderColor-rest);
+
+  &:hover {
+    cursor: pointer;
+    background: var(--button-bgColor-hover);
+  }
+
+  &:active {
+    background: var(--button-bgColor-active);
+  }
+
+  &:focus-visible {
+    outline-offset: 2px;
+  }
+}
+
+a {
+  text-decoration-thickness: 2px;
+  text-underline-offset: 2px;
+
+  &:hover {
+    color: var(--link-fgColor-hover);
+  }
+}
+
+label {
+  font-weight: 600;
+}
+
+form {
+  display: grid;
+  gap: var(--base-size-12);
+}
+
+form > div {
+  display: grid;
+  gap: var(--base-size-4);
+}
+
+/* typography */
+
+h1 {
+  font-size: var(--base-size-28);
+}
+
+h2 {
+  font-size: var(--base-size-24);
+  margin-block-end: var(--base-size-16);
+}
+
+h3 {
+  font-size: var(--base-size-20);
+  margin-block-end: var(--base-size-8);
+}
+
+h4 {
+  font-size: var(--text-body-size-large);
+  margin-block-end: var(--base-size-4);
+  font-weight: 600;
 }
 
 :where(hr) {
-  background-color: var(--surface-4);
-  height: var(--border-size-2);
-  margin-block-end: var(--size-3);
-  margin-block-start: var(--size-1);
+  border: none;
+  border-top: 4px dotted var(--red-4);
+  width: 100%;
+  margin: 0;
+
+  &:last-of-type {
+    display: none;
+  }
 }
 
 :where(a) {
@@ -43,71 +161,98 @@
   padding-inline: unset;
 }
 
+nav {
+  display: grid;
+  gap: var(--base-size-16);
+  grid-auto-flow: column;
+  align-items: start;
+  justify-content: start;
+  margin-block-end: var(--base-size-64);
+  margin-block-start: var(--base-size-48);
+  margin-inline-start: var(--base-size-20);
+}
+
 body {
   display: grid;
-  place-content: center;
-  padding-inline: 1rem;
-  background-color: var(--surface-1);
-  color: var(--text-1);
+  place-content: start center;
+  padding-inline: var(--base-size-8);
+  grid-template-columns: minmax(min-content, 34rem);
 }
 
 main {
   display: grid;
-  gap: 1rem;
+  gap: var(--base-size-24);
   /* grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); */
+  /* background: var(--gray-surface); */
+  background: var(--color-background);
+  padding: var(--base-size-20);
+  border-radius: var(--base-size-12);
 }
 
-.food {
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: start;
-  font-size: var(--font-size-2);
+@media (min-width: 544px) {
+  main {
+    /* will-change: background transform; */
+    /* animation: fade_bg 1s cubic-bezier(.14,.18,.16,1.02); */
+    background: var(--gray-surface);
+    padding: var(--base-size-32);
+    box-shadow: var(--shadow-medium);
+  }
+
+  nav {
+    margin-inline-start: var(--base-size-32);
+  }
 }
 
-.food > * {
-  position: relative;
-}
-
-.food > :not(:last-child)::after {
-  content: "";
-  display: inline-block;
-  height: 0.8em;
-  margin: 0px 0.5em;
-  border-right-width: 0.1em;
-  border-right-style: solid;
-  border-color: var(--fgColor-muted, var(--color-fg-muted, #656d76));
-  transform: rotate(15deg) translateY(0.0625em);
+@keyframes fade_bg {
+  0%, 14% {
+    background-color: var(--color-background);
+  }
+  30%, 100% {
+    background-color: var(--gray-surface);
+  }
 }
 
 .day {
-  box-shadow: var(--shadow-2);
-  background: var(--surface-1);
-  padding: var(--size-4);
-  border-radius: var(--radius-3);
-  border: solid 1px var(--stone-3);
   display: grid;
-  gap: 1.5rem;
 }
 
-.meal-wrap {
+.meals {
   display: grid;
-  gap: 1rem;
+  gap: var(--base-size-12);
 }
 
 .food-list {
-  display: grid;
-  gap: .25rem;
-  color: var(--stone-7);
+  color: var(--fgColor-secondary);
 }
 
-.meal-wrap h4 {
-  margin-block-end: var(--size-2);
+.holder {
+  /* Clip edges, as some of the lines don't terminate nicely. */
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 50px;
 }
 
-nav {
-  display: grid;
-  gap: 1rem;
-  grid-auto-flow: column;
-  justify-content: center;
-  margin-block: var(--size-3);
+.ellipse {
+  position: absolute;
+  background: radial-gradient(ellipse, transparent, transparent 7px, black 7px, black 10px, transparent 11px);
+  background-size: 36px 40px;
+  width: 100%;
+  height: 20px;
 }
+
+.ellipse2 {
+  top: 20px;
+  left: 18px;
+  background-position: 0px -20px;
+}
+
+/* hr {
+    background-image:url("data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDEiIGhlaWdodD0iMTQiIGZpbGw9Im5vbmUiIHhtbG5zPSJodHRwOi8vd3d3LnczLm9yZy8yMDAwL3N2ZyI+PHBhdGggZD0iTTIgOC41IDYuMiA0bDcuOCA2IDYuNi01LjU1TDI3LjUgMTBsNC42NS01LjFMMzkuMiAxMCIgc3Ryb2tlPSIjMDAwIiBzdHJva2Utd2lkdGg9IjMiLz48L3N2Zz4=");
+    background-position:50%;
+    background-repeat:no-repeat;
+    background-size:contain;
+    border:none!important;
+    height:20px;
+    width:75px
+} */
